# meld-win-launcher

./: CMakeLists.txt  README.md  meld.c  meld.rc
cmake/: toolchain-windows-mingw64-i686.cmake
